# tacky-borders

./: Cargo.toml
.github/workflows/: rust.yml
src/: anim_timer.rs  auto_start.rs  colors.rs  config.rs  iocp.rs  komorebi.rs  lib.rs  main.rs  sys_tray_icon.rs  utils.rs  window_border.rs
