[package]
name = "tacky-borders"
version = "1.4.1"
edition = "2024"

[dependencies]
serde = "1.0.228"
serde_yaml_ng = "0.10.0"
serde_json = "1.0.149"
serde_json_borrow = "0.9.0"
tray-icon = "0.21.3"
open = "5.3.3"
dirs = "6.0.0"
regex = "1.12.3"
log = "0.4.29"
sp_log = "0.2.1"
anyhow = "1.0.101"
windows-numerics = "0.3.1"
winreg = "0.55.0"

[dependencies.windows]
version = "0.62.2"
features = [
  "Win32_Graphics_Direct2D",
  "Win32_Graphics_Direct2D_Common",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_DirectComposition",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dwm",
  "Win32_Networking_WinSock",
  "Win32_Security",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_IO",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_Storage_FileSystem",
  "Win32_UI_Accessibility",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_Ime",
  "Win32_UI_WindowsAndMessaging",
  "Wdk_System_SystemServices",
]

[dev-dependencies]
serial_test = "3.3.1"

[build-dependencies]
winres = "0.1.12"
